--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,8 +230,9 @@ input, select, textarea {
 		margin: 0 0 0.7em 0;
 	}
 		h1.blog{
-			line-height: 0;
-			margin: 0.25em 0 0.7em 0;
+			line-height: 1.2;
+			margin: -0.35em 0 0.4em -0.04em;
+			font-weight: bold;
 		}
 
 	h2 {
