--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,7 +213,7 @@ input, select, textarea {
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
 		line-height: 1.35;
-		margin: 0em 0 0.3em 0;
+		margin: 0em 0 0.3em -0.03em;
 		letter-spacing: -0.025em;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-weight: 400;
